# what-the-ref

./: Cargo.toml  README.md  main.css  main.js
rulesets/: rulesets.toml
rulesets/2023-centerstage/game-specific/: gs01.md  gs02.md  gs03.md  gs04.md  gs05.md  gs06.md  gs07.md  gs08.md  gs09.md  gs10.md  gs11.md  gs12.md  gs13.md
rulesets/2023-centerstage/general/: g01.md  g02.md  g03.md  g04.md  g05.md  g06.md  g07.md  g08.md  g09.md  g10.md  g11.md  g12.md  g13.md  g14.md  g15.md  g16.md  g17.md  g18.md  g19.md  g20.md  g21.md  g22.md  g23.md  g24.md  g25.md  g26.md  g27.md  g28.md  g29.md  g30.md
rulesets/2023-centerstage/glossary/: alliance.md  alliance_neutral.md  alliance_specific.md  alliance_station.md  apriltag.md  area.md  autonomous_period.md  backdrop.md  backstage.md  block_blocking.md  coach.md  competition_area.md  control_controlling.md  disable_disabled.md  disqualified_disqualification_disqualify.md  drive_team.md  driver.md  driver_controlled_period.md  driver_station.md  drone.md  end_game.md  end_of_the_period_match.md  game_element.md  grasp.md  herding.md  human_player.md  human_player_station.md  in_inside_completely_in_completely_inside.md  inadvertent.md  inconsequential.md  interference.md  landing_zone.md  launch_launching.md  match.md  mosaic.md  navigating.md  out_outside.md  (+39 more)
src/: consequences.rs  consts.rs  glossary.rs  interlink_md.rs  main.rs  markdown.rs  qa_briefing.rs  rule.rs  rule_briefing.rs  rule_number.rs  ruleset.rs  ruleset_load_error.rs  ruleset_meta.rs  summary.rs  term.rs  text_normalization.rs
templates/: ruleset.html
(+338 files in other folders)
