[package]
name = "what_the_ref"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
askama = "0.12"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
feed-rs = "1.3"
indexmap = { version = "2.1", features = ["serde"] }
log = "0.4"
markdown-it = "0.6"
markdown-it-front-matter = "0.3"
once_cell = "1.18"
regex = "1.10"
rust-stemmers = "1.2"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.18"
toml = "0.8"

[profile.release]
lto = true
